// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer adds integration popover status to state 1`] = `
Object {
  "basePath": "",
  "integrationsPopoverOpen": null,
  "lastRefresh": 125,
}
`;

exports[`ui reducer sets the application's base path 1`] = `
Object {
  "basePath": "abc",
  "integrationsPopoverOpen": null,
  "lastRefresh": 125,
}
`;

exports[`ui reducer updates the refresh value 1`] = `
Object {
  "basePath": "",
  "filters": Map {},
  "integrationsPopoverOpen": null,
  "lastRefresh": 1576085567590,
}
`;
